1. 实现了单分区的一套流程。 2. 离线测试可以通过。 3. 要修改校正结果页。

--- a/miniLED_vs/miniLED_vs.vcxproj
+++ b/miniLED_vs/miniLED_vs.vcxproj
@@ -66,6 +66,13 @@
       <AdditionalLibraryDirectories>$(QTDIR)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>qtmaind.lib;Qt5Cored.lib;Qt5Guid.lib;Qt5Networkd.lib;Qt5Widgetsd.lib;VwGigE_Demo_SingleCam_Console.lib;net_protocol.lib;Qt5Sqld.lib;opencv_world320d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <HeapReserveSize>2658880000</HeapReserveSize>
+      <HeapCommitSize>
+      </HeapCommitSize>
+      <StackReserveSize>2658880000</StackReserveSize>
+      <StackCommitSize>
+      </StackCommitSize>
+      <LargeAddressAware>true</LargeAddressAware>
     </Link>
     <QtMoc>
       <OutputFile>.\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp</OutputFile>
