1. 算法可以跑通 2. 增加了保存文件的目录 3. 增加了Check原图和裁剪图 下一步实现： 1. 设置页面保存执行初始化 2. Check界面，鼠标点击显示实际坐标和校正方程 3. 色度校正功能。

--- a/miniLED_vs/miniLED_vs.vcxproj
+++ b/miniLED_vs/miniLED_vs.vcxproj
@@ -59,6 +59,7 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <TreatWChar_tAsBuiltInType>true</TreatWChar_tAsBuiltInType>
+      <ExceptionHandling>SyncCThrow</ExceptionHandling>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -131,6 +132,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mainwindow.cpp" />
     <ClCompile Include="mytablemodel.cpp" />
+    <ClCompile Include="PhotoFileManager.cpp" />
     <ClCompile Include="pixitem.cpp" />
     <ClCompile Include="qmytableview.cpp" />
     <ClCompile Include="qpicturebox.cpp" />
@@ -168,6 +170,7 @@
       <IncludePath Condition="'$(Configuration)|$(Platform)'=='Release|x64'">.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtNetwork;$(QTDIR)\include\QtWidgets;$(QTDIR)\include\QtSql</IncludePath>
     </QtMoc>
     <ClInclude Include="GeneratedFiles\ui_mainwindow.h" />
+    <ClInclude Include="PhotoFileManager.h" />
     <ClInclude Include="Util.h" />
     <QtMoc Include="showpartitionorcamera.h" />
     <QtMoc Include="direselector.h" />
