--- a/miniLED_vs/miniLED_vs.vcxproj.filters
+++ b/miniLED_vs/miniLED_vs.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClCompile Include="qmytableview.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PhotoFileManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="mainwindow.ui">
@@ -180,6 +183,9 @@
       <Filter>Header Files\Algorithm</Filter>
     </ClInclude>
     <ClInclude Include="GeneratedFiles\ui_mainwindow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PhotoFileManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
