--- a/miniLED_vs/miniLED_vs.vcxproj.filters
+++ b/miniLED_vs/miniLED_vs.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClCompile Include="PhotoFileManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="qcolorcali.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="mainwindow.ui">
@@ -120,6 +123,9 @@
       <Filter>Form Files</Filter>
     </QtUic>
     <QtUic Include="qmytableview.ui">
+      <Filter>Form Files</Filter>
+    </QtUic>
+    <QtUic Include="qcolorcali.ui">
       <Filter>Form Files</Filter>
     </QtUic>
   </ItemGroup>
@@ -160,6 +166,9 @@
       <Filter>Header Files\Util</Filter>
     </QtMoc>
     <QtMoc Include="qmytableview.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="qcolorcali.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
